# IconResizer

./: CMakeLists.txt  main.cpp
